- Avatar Menu: The issue where the avatar menu opens invisibly without interaction on the desktop view is also present on the mobile view. We need to fix this issue for mobile and check it in responsive mode. - Authentication Pages (Sign-in/Sign-up): On mobile view, the container mimics the desktop view, which doesn’t look good. Please either remove the containers completely for the mobile view or decrease their size to improve aesthetics.

--- a/src/index.css
+++ b/src/index.css
@@ -428,11 +428,11 @@ a {
 }
 
 /* sign in */
-.signin *,
+/* .signin *,
 .signup *,
 .dashboard * {
   font-family: "IBM Plex Sans", sans-serif !important;
-}
+} */
 /* sign up */
 .ant-steps.ant-steps-dot .ant-steps-item-content,
 .ant-steps.ant-steps-dot.ant-steps-small .ant-steps-item-content {
